--- a/src/parks-and-fruits/index.pug
+++ b/src/parks-and-fruits/index.pug
@@ -10,4 +10,5 @@ html
     include dev.pug
     script(src="./gsap.min.js")
     script(src="./Flip.min.js")
+    script(src="./ScrollTrigger.min.js")
     script(type="module" src="script.js")
