feat: update to Kent recorder

--- a/src/kent-recorder/style.styl
+++ b/src/kent-recorder/style.styl
@@ -5,10 +5,12 @@
 
 body
   min-height 100vh
+  background hsl(180, 40%, 80%)
 
 #root
-  display grid
-  place-items center
+  display flex
+  align-items center
+  justify-content center
 
 canvas
   width 90vw
