--- a/src/kent-recorder/index.pug
+++ b/src/kent-recorder/index.pug
@@ -5,6 +5,7 @@ html
     title kent-recorder
     meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1.0")
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css')
+    link(rel='stylesheet', href='https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css')
     link(rel='stylesheet', href='style.css')
   body
     include dev.pug
