feat: check in Kent sprite

--- a/src/react-parallax/style.styl
+++ b/src/react-parallax/style.styl
@@ -20,6 +20,7 @@ img
   height 50vmin
   width 50vmin
   perspective 50vmin
+  transform translate3d(0, 0, 50vmin)
 
 .parallax
   transform rotateX(calc((var(--rx, 0) * var(--range-y, 0)) * 1deg)) rotateY(calc((var(--ry, 0) * var(--range-x, 0)) * 1deg)) rotate(calc((var(--r, 0) * var(--range-x, 0)) * 1deg))
