--- a/src/firework-button/style.styl
+++ b/src/firework-button/style.styl
@@ -4,11 +4,11 @@
   box-sizing border-box
 
 body
-  min-height 100vh
+  min-height 200vh
   display grid
   place-items center
+  overflow-x hidden
 
 canvas
   background hsl(0, 0%, 5%)
-  height 300px
-  width 300px
+  position absolute
