--- a/src/3d-css-package/dev.pug
+++ b/src/3d-css-package/dev.pug
@@ -7,8 +7,14 @@ mixin flaps(taped)
       .package__tape.package__tape--bottom
 
 input#package(type="checkbox")
-input#one(type="checkbox")
-label.one(for="one") Shape One
+input#one(type="radio" name='size')
+label.size-label.one(for="one") S
+input#two(type="radio" name='size' checked)
+label.size-label.two(for="two") M
+input#three(type="radio" name='size')
+label.size-label.three(for="three") L
+input#four(type="radio" name='size')
+label.size-label.four(for="four") XL
 label.close(for="package") Close Package
 label.open(for="package") Open Package
 .scene
@@ -16,6 +22,7 @@ label.open(for="package") Open Package
     .package__shadow
     .package
       .package__content
+        //- .package__icon.package__icon--css 😿
         svg.package__icon.package__icon--css(role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
           title CSS3
           path(d="M1.5 0h21l-1.91 21.563L11.977 24l-8.565-2.438L1.5 0zm17.09 4.413L5.41 4.41l.213 2.622 10.125.002-.255 2.716h-6.64l.24 2.573h6.182l-.366 3.523-2.91.804-2.956-.81-.188-2.11h-2.61l.29 3.855L12 19.288l5.373-1.53L18.59 4.414z")
