--- a/src/3d-css-package/style.styl
+++ b/src/3d-css-package/style.styl
@@ -232,6 +232,29 @@ input
   transition transform calc(var(--speed, 0.2) * 1s) calc((var(--step, 1) * var(--delay, 1)) * 1s), opacity 0.1s calc(((var(--step, 1) * var(--delay, 1)) + ((var(--speed) - 0.1) * (1 - var(--packaged)))) * 1s), height calc(var(--speed, 0.2) * 1s), width calc(var(--speed, 0.2) * 1s)
   transition-timing-function ease-in-out
 
+#one:focus ~ .scene
+#two:focus ~ .scene
+#three:focus ~ .scene
+#four:focus ~ .scene
+  .package
+  .package__wrapper
+  .package__flap
+  .package__flap--top
+  .package__flap--bottom
+  .package__side
+  .package__side:after
+  .package__icon
+  .package__tape--top
+  .package__tape--bottom
+  .package__branding
+  .package__label
+  .package__label:after
+  .package__label:before
+  .package__shadow
+  .package__label--shadow
+  .package__branding--shadow
+    transition none
+    transition-timing-function ease-in-out
 
 // Transition steps for closing
 .package__side--extra
