--- a/src/smashing-audio-demo-steps/style.styl
+++ b/src/smashing-audio-demo-steps/style.styl
@@ -4,19 +4,23 @@
 
 body {
   min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background: hsl(0, 0%, 20%);
+}
+#app {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   flex-gap: 1rem;
   gap: 1rem;
-  background: hsl(0, 0%, 20%);
 }
 
 canvas {
   height: 200px;
   width 300px;
-  background: hsl(0, 0%, 10%);
+  background: hsl(0, 0%, 20%);
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 
@@ -62,7 +66,6 @@ canvas {
 }
 
 .stop {
-  display: none;
   position: absolute;
   left: 125%;
   border: none;
@@ -104,4 +107,75 @@ canvas {
 
 .reveal[aria-pressed="true"] svg:nth-of-type(2) {
   display: block;
+}
+
+.recordings {
+  font-family: sans-serif;
+  color: hsl(0, 0%, 100%);
+  width: 300px;
+  padding: 1.25rem;
+}
+
+.recordings summary {
+  font-weight: bold;
+}
+
+.recordings__empty-message {
+  padding: 1rem;
+  text-align: center;
+}
+
+.recordings__list {
+  padding: 0.5rem 0;
+  margin: 0;
+}
+
+.recordings__list > * + * {
+  margin-top: 0.5rem;
+}
+
+.recordings__recording {
+  display: flex;
+  flex-direction: row;
+  flex-gap: 0.125rem;
+  gap: 0.125rem;
+  align-items: center;
+}
+
+.recordings__recording span {
+  flex: 1 1 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.recordings__recording:nth-of-type(even) {
+  background: hsl(0, 0%, 25%);
+}
+
+.recordings__control {
+  background: var(--bg);
+  color: hsl(0, 0%, 100%);
+  display: grid;
+  place-items: center;
+  height: 44px;
+  width: 44px;
+  flex: 0 0 44px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.recordings__control svg {
+  fill: currentColor;
+  width: 75%;
+}
+
+.recordings__play {
+  --bg: hsl(120, 50%, 50%);
+}
+.recordings__delete {
+  --bg: hsl(10, 50%, 50%);
+}
+.recordings__download {
+  --bg: hsl(210, 50%, 50%);
 }
