--- a/src/slinky-flip-flop/style.styl
+++ b/src/slinky-flip-flop/style.styl
@@ -48,14 +48,13 @@
 @property --speed
   syntax '<time>'
   inherits true
-  initial-value 1.5s
+  initial-value 1.25s
 
 :root
-  --spin-speed 0
-  --border-width 1.8vmin
+  --border-width 1.2vmin
   --depth 20vmin
-  --stack-height 3vmin
-  --scene-size 16vmin
+  --stack-height 6vmin
+  --scene-size 20vmin
   --ring-size calc(var(--scene-size) * 0.6)
   --plane radial-gradient(hsla(0, 0%, 0%, 0.1) 50%, transparent 65%)
   --ring-shadow hsla(0, 0%, 0%, 0.5)
@@ -81,8 +80,8 @@ body
 .scene
   height var(--scene-size)
   width var(--scene-size)
-  transform translate(calc(var(--flip-flop, 1) * -50%), 0) translate3d(var(--sx), 0, var(--sz))
-  animation step-down var(--speed) infinite linear
+  transform translate(-50%, 0) translate3d(var(--sx), 0, var(--sz))
+  animation step-down var(--speed) infinite ease
   
   &__shadow
     position absolute
@@ -101,6 +100,14 @@ body
   width var(--scene-size)
   transform rotate(var(--flip))
   animation flip-flop calc(var(--speed) * 2) infinite steps(1)
+  
+@keyframes flip-flop
+  0%
+    --flip 0deg
+  50%
+    --flip 180deg
+  100%
+    --flip 360deg
 
 .plane
   height 100%
@@ -136,7 +143,7 @@ body
       
 .container
   transform translate3d(0, 0, 100vmin) rotateX(-12deg) rotateY(0deg) rotateX(90deg) translate3d(0, 0, calc(var(--depth) * -1.5)) rotate(var(--rs))
-  animation rotate-scene calc(var(--speed) * var(--spin-speed)) infinite linear
+  animation rotate-scene calc(var(--speed) * 40) infinite linear
   
 .ring
   --origin-z calc(var(--stack-height) - (var(--stack-height) / var(--ring-count)) * var(--index))
@@ -163,3 +170,68 @@ body
     
   @media(prefers-color-scheme dark)
     --ring-filter brightness(2) drop-shadow(0 0 calc(var(--border-width) * 0.5) var(--accent))
+
+
+// STYLUS GENERATED KEYFRAMES BE HERE...
+$ring-count = 21
+$animation-window = 50
+$animation-step = $animation-window / $ring-count
+// Need to generate the keyframes here.
+// This would be a great use case for animation-repeat-delay instead of padding out
+// keyframes. We would be able to reuse dynamic delays with the same keyframes.
+
+// Need to generate keyframes based on ring-count and given a set window within the keyframes.
+// For example; 50% of the window for 10 rings.
+
+for $ring in (0..$ring-count)
+  // Generate a set of keyframes based on the ring index
+  // index is the ring
+  $start = $animation-step * ($ring + 1)
+  @keyframes spring-{$ring} {
+    // In here is where we need to generate the keyframe steps based on ring count and window.
+    0%, {$start * 1%} {
+      --z 0
+      --x 0%
+      --r 0deg
+    }
+    // Flip without falling
+    {($start + ($animation-window * 0.75)) * 1%} {
+      --r 180deg
+      --x 0%
+      --z 0
+    }
+    // Fall until cut off point
+    {($start + $animation-window) * 1%}, 100% {
+      --z calc((var(--depth) + var(--origin-z) - (var(--stack-height) - ((var(--stack-height) - (var(--stack-height) / var(--ring-count)) * (var(--index) + 1))))) * -1) 
+      --x 0%
+      --r 180deg
+    }
+  }
+  
+@keyframes fade-in {
+  {$animation-window * 1%}, 0% {
+    --opacity 0
+  }
+  {$animation-window * 1.5%}, 100% {
+    --opacity 1
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    --opacity 1
+  }
+  {$animation-window * 1.5%}, 100% {
+    --opacity 0
+  }
+} 
+    
+@keyframes step-down
+  100%
+    --sx -0%
+    --sz var(--depth)
+  
+    
+@keyframes rotate-scene
+  to
+    --rs 360deg
