--- a/src/digitalocean-steps/style.styl
+++ b/src/digitalocean-steps/style.styl
@@ -2,17 +2,13 @@
   --size 40
   --bg hsl(0, 0%, 98%)
   --hue 215
-  --rotation-y -75deg
-  --rotation-x -14deg
-
-
-svg
-  position fixed
-  top 50%
-  left 50%
-  transform translate(-50%, -50%)
-  height calc(var(--size) * 1vmin)
-  aspect-ratio 1 / 1
+  --rotation-y 75
+  --rotation-x -14
+  --remove 0
+  --initial-delay 1
+  --wave-speed 2
+  --fade-speed 0.5
+  --filter-speed 1
 
 .cuboid
   width 100%
@@ -72,35 +68,37 @@ svg
 
 .cylinder
   --bg 'hsl(%s, 100%, 50%)' % var(--hue)
-  height calc(var(--height, 40) * 1vmin)
+  height 100%
+  width 100%
   position relative
-  width calc(var(--radius, 40) * 2vmin)
 
   &__segment
     filter brightness(var(--b, 1))
     background var(--bg, hsl(0, 80%, 50%))
     position absolute
+    top 50%
+    left 50%
 
   // Top
   &__end
     --b 1.2
-    top var(--t, 0)
-    height calc(var(--radius, 40) * 2vmin)
-    width calc(var(--radius, 40) * 2vmin)
+    --end-coefficient 0.5
+    height 100%
+    width 100%
     border-radius 50%
-    transform translate(0, -50%) rotateX(90deg)
+    opacity calc(1 - var(--remove))
+    transform translate3d(-50%, -50%, calc((var(--depth, 0) * var(--end-coefficient)) * 1vmin))
+    transition opacity 0.2s
 
   &__end--bottom
     --b 0.8
-    --t 100%
+    --end-coefficient -0.5
 
   &__side
     --b 0.89
-    height calc(var(--height, 30) * 1vmin)
+    height calc(var(--depth, 30) * 1vmin)
     width calc(var(--side) * 1vmin)
-    top 0
-    left 50%
-    transform translate(-50%, 0) rotateY(calc((var(--index, 0) * 360 / var(--sides)) * 1deg)) translate3d(50%, 0, calc(var(--projection) * 1vmin))
+    transform translate(-50%, -50%) rotateX(90deg) rotateY(calc((var(--index, 0) * 360 / var(--sides)) * 1deg)) translate3d(50%, 0, calc((var(--radius) * (var(--cylinder-projection, 100) / 100)) * 1vmin))
 
 *
 *:after
@@ -114,11 +112,38 @@ body
   min-height 100vh
   display grid
   place-items center
-  
+  overflow hidden
+
+.scene__wrapper
+  position fixed
+  height 100vh
+  width 100vw
+  top 0
+  left 0
+  display grid
+  place-items center
+  &:after
+  &:before
+    content ''
+    position absolute
+    height 100vh
+    width 100vw
+    background 'hsl(%s, 100%, %s)' % (var(--hue) calc(var(--lightness, 50) * 1%))
+    transform translate3d(100%, 0, 200vmin)
+    animation-name wave
+    animation-duration calc(var(--wave-speed) * 1s)
+    animation-delay calc(var(--initial-delay) * 1s)
+    animation-timing-function ease-in
+
+  &:before
+    --lightness 85
+    animation-timing-function ease-out
+    
+
 .scene
-  background purple
-  transform translate3d(0, 0, 100vmin) rotateX(-16deg) rotateY(28deg) rotateX(90deg) rotateZ(calc(var(--coefficient-x, 0) * var(--rotation-y, 0deg))) rotateX(calc(var(--coefficient-y, 0) * var(--rotation-x, 0deg)))
-  // transform translate3d(0, 0, 100vmin) rotateX(-16deg) rotateY(28deg) rotateX(90deg)
+  position relative
+  transform translate3d(0, 0, 100vmin) rotateX(-16deg) rotateY(28deg) rotateX(calc((var(--coefficient-y, 0) * var(--rotation-x, 0)) * 1deg)) rotateY(calc((var(--coefficient-x, 0) * var(--rotation-y, 0)) * 1deg))
+  
 
 .logo
   height calc(var(--size) * 1vmin)
@@ -126,7 +151,7 @@ body
   position absolute
   top 50% 
   left 50%
-  transform translate(-50%, -50%) rotateX(-90deg)
+  transform translate(-50%, -50%)
   
   &__cap
     position absolute
@@ -135,6 +160,8 @@ body
     background 'hsl(%s, 100%, 50%)' % var(--hue)
 
     &--top
+      filter brightness(0.5)
+      height calc((var(--size) * 0.1925vmin) * var(--cylinder-depth, 1))
       top 50%
       transform translate(0, -50%) rotateX(90deg)
     
@@ -142,6 +169,7 @@ body
       bottom 0
       right 50%
       transform translate(50%, 0) rotateY(90deg)
+      width calc((var(--size) * 0.1925vmin) * var(--cylinder-depth, 1))
   
   &__arc
     border-radius 50%
@@ -164,8 +192,8 @@ body
     width calc(var(--width, 0) * 1%)
     left calc(var(--x, 0) * 1%)
     top calc(var(--y, 0) * 1%)
-    transform 'translate3d(calc((%s * %s) * 1%), calc((%s * %s) * 1%), calc((%s * %s) * 1vmin))' % (var(--coefficient-x, 0) var(--offset-x, 0) var(--coefficient-y) var(--offset-y, 0) var(--coefficient-x) var(--offset-z, 0))
-    
+    transform 'translate3d(calc(min(0, %s * %s) * 1%), calc((%s * %s) * 1%), calc((%s * %s) * 1vmin))' % (var(--coefficient-x, 0) var(--offset-x, 0) var(--coefficient-y) var(--offset-y, 0) var(--coefficient-x) var(--offset-z, 0))
+
     &--one
       --height 19.25
       --width 19.25
@@ -174,7 +202,6 @@ body
       --offset-x 50
       --offset-y 10
       --offset-z -2
-      transform 'translate3d(calc(min(0, calc(%s * %s)) * 1%), calc((%s * %s) * 1%), calc((%s * %s) * 1vmin))' % (var(--coefficient-x, 0) var(--offset-x, 0) var(--coefficient-y) var(--offset-y, 0) var(--coefficient-x) var(--offset-z, 0))
     
     &--two
       --height 14.75
@@ -190,7 +217,7 @@ body
       --width 12.5
       --x 3.5
       --y 68.25
-      --offset-x 25
+      --offset-x 100
       --offset-y 30
       --offset-z -6
       
@@ -205,8 +232,8 @@ body
     --depth calc(var(--size) * 0.125)
     
 .cylinder-arc
-  --height calc(var(--size) * 0.1925)
-  transform translate(-50%, -50%) rotate(-90deg) rotateX(90deg)
+  --depth calc((var(--size) * 0.1925) * var(--cylinder-depth, 1))
+  transform translate(-50%, -50%) rotate(-90deg)
   position absolute
   top 50%
   left 50%
@@ -214,10 +241,38 @@ body
   &--outer
     .cylinder__end--top
     .cylinder__end--bottom
+      --b 0.8
       background-color transparent
       border-width calc(var(--size) * 0.1975vmin)
       border-style solid
       border-color 'hsl(%s, 100%, 50%)' % var(--hue)
-      -webkit-clip-path polygon(0 50%, 50% 50%, 50% 100%, 100% 100%, 100% 0, 0 0)
-      clip-path polygon(0 50%, 50% 50%, 50% 100%, 100% 100%, 100% 0, 0 0)
+      --clip polygon(50% 0, 50% 50%, 0 50%, 0 100%, 100% 100%, 100% 0)
+      -webkit-clip-path var(--clip)
+      clip-path var(--clip)
       
+    .cylinder__end--bottom
+      --b 1.2
+      
+.cylinder__segment
+.cuboid__side
+.logo__cap
+  animation-name fade-in, filter-in
+  animation-duration calc(var(--fade-speed) * 1s), calc(var(--filter-speed) * 1s)
+  animation-delay calc(((var(--initial-delay) + var(--wave-speed)) * var(--fade-coefficient, 0.75)) * 1s), calc(((var(--initial-delay) + var(--wave-speed)) * var(--filter-coefficient, 1.25)) * 1s)
+  animation-fill-mode both
+  
+@keyframes filter-in
+  from
+    filter brightness(1)  
+      
+  
+@keyframes fade-in
+  from
+    opacity 0
+  
+@keyframes wave
+  from
+    transform translate3d(-100%, 0, 200vmin)
+    
+.dg.ac
+  z-index 9999 !important
