--- a/src/google-devrel-reveal/index.pug
+++ b/src/google-devrel-reveal/index.pug
@@ -8,4 +8,6 @@ html
     link(rel='stylesheet', href='style.css')
   body
     include dev.pug
+    script(src="MorphSVGPlugin.min.js")
+    script(src="SplitText.min.js")
     script(type="module" src="script.js")
