feat: solved the foundations

--- a/src/dino-stan-bishi-bashi/index.pug
+++ b/src/dino-stan-bishi-bashi/index.pug
@@ -1,4 +1,4 @@
-html.has-support
+html.has-support.houdini-support
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
